# gitsnow

./: .sqlfluff  README.md  pyproject.toml
cli/: __init__.py  cli.py  container.py  db.py  db_mock.py  dependencies.py  diff.py  format.py  pyproject.toml  test_dependencies.py
testdata/snowflake/dynamic_tables/: example.sql
tests/fixtures/schemas/sales/tables/: customer_accounts.sql  customers.sql  order_dynamic.sql  orders.sql
tests/fixtures/schemas/sales/views/: order_account_summary.sql  order_debug.sql  order_debug_v2.sql  order_summary.sql
