[project]
name = "gitsnow"
version = "0.2.0"
description = "Tools to manage Snowflake objects in a declarative way."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click",
    "snowflake-connector-python[pandas]",
    "toml>=0.10.2",
    "sqlfluff",
    "sqllineage",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
]
